@@ -31,7 +31,6 @@ precision lowp float;
 
 varying vec4 v_fragmentColor;
 varying vec2 v_texCoord;
-uniform sampler2D CC_Texture0;
 
 void main()
 {
