@@ -7,8 +7,6 @@ precision mediump float;
 varying vec4 v_fragmentColor;
 varying vec2 v_texCoord;
 
-uniform sampler2D CC_Texture0;
-
 uniform vec4 gaussianCoefficient;
 uniform vec2 onePixelSize;
 
