@@ -6,7 +6,6 @@ varying vec4 v_fragmentColor;
 varying vec2 v_texCoord;
 
 uniform vec2 resolution;
-uniform sampler2D CC_Texture0;
 
 
 const float blurSize = 1.0/512.0;
