@@ -6,7 +6,6 @@ varying vec4 v_fragmentColor;
 varying vec2 v_texCoord;
 
 uniform vec2 resolution;
-uniform sampler2D CC_Texture0;
 
 float lookup(vec2 p, float dx, float dy)
 {
