@@ -5,8 +5,6 @@ precision mediump float;
 varying vec4 v_fragmentColor;
 varying vec2 v_texCoord;
 
-uniform sampler2D CC_Texture0;
-
 void main(void)
 {
 	vec4 c = texture2D(CC_Texture0, v_texCoord);
